--- a/src/app/add-todo/add-todo.component.html
+++ b/src/app/add-todo/add-todo.component.html
@@ -1,5 +1,4 @@
-<span class="p-float-label">
+<span class="p-float-label add-todo">
     <input id="float-input" type="text" pInputText [(ngModel)]="title" (keydown.enter)="addTodo()"> 
-    <label for="float-input">add todo</label>
     <p-button icon="pi pi-plus" (click)="addTodo()"></p-button>
 </span>
