--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,10 @@
 <div class="container">
-  <b>Создать заметку</b>
-  <app-add-todo></app-add-todo>
-  <hr>
-  <app-todo-list></app-todo-list>
-</div>
+  <div class="wrap">
+    <h2 class="title">Создать заметку</h2>
+    <app-add-todo></app-add-todo>
+    <hr>
+    <h2 class="title">Список заметок</h2>
 
-
-
-<!-- <div class="p-col-3 p-md-3">
-  <div class="p-inputgroup">
-      <span class="p-inputgroup-addon"><p-checkbox></p-checkbox></span>
-      <input type="text" pInputText placeholder="Username"> 
-      <button pButton pRipple type="button" icon="pi pi-times" class="p-button-danger"></button>
+    <app-todo-list></app-todo-list>
   </div>
-</div> -->
+</div>
