--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,6 +1,34 @@
 .container{
     max-width: 1148px;
-    margin: 0 auto;
-    height: 300px;
-    background: lightblue;
+    margin: 2rem auto;
+    background: #fff;
+    border-radius: 5px;
+    display: flex;
+    .wrap{
+        flex-basis: 360px;
+        margin: 1rem 0 1.5rem 2rem;
+        span{
+            margin-right: .5rem;
+            font-family: SF UI Display;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 20px;
+
+            color: #757885;
+        }
+    }
+    .title{
+        margin:0;
+        padding: 0;
+
+        margin-bottom:1rem;
+
+        font-family: SF UI Display;
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 24px;
+        color: #434652;
+    }
 }
