--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -1,6 +1,10 @@
+<div class="filters">
+    <span>Показывать</span>
+    <p-dropdown [options]="cities" [(ngModel)]="selectedCity"></p-dropdown>
+</div>
 <div *ngIf="!loading">
     <ul *ngIf="todosService.todos.length; else noTodos">
-        <li *ngFor="let todo of todosService.todos; index as i">
+        <li *ngFor="let todo of todosService.todos | todosFilter:selectedCity; index as i">
             <div class="p-inputgroup">
                 <span class="p-inputgroup-addon">
                     <p-checkbox [(ngModel)]="todo.completed" [binary]="true" ng-change="onChange(todo.id)"></p-checkbox>
