add todo list in Akita

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,6 @@
     <app-add-todo></app-add-todo>
     <hr>
     <h2 class="title">Список заметок</h2>
-
-    <app-todo-list></app-todo-list>
+    <app-todo-list [todos]="todos$ | async"  [loading]="loading$" ></app-todo-list>
   </div>
 </div>
