--- a/src/app/todo-list/todo-list.component.html
+++ b/src/app/todo-list/todo-list.component.html
@@ -2,16 +2,16 @@
     <span>Показывать</span>
     <p-dropdown [options]="cities" [(ngModel)]="selectedCity"></p-dropdown>
 </div>
-<div *ngIf="!loading">
-    <ul *ngIf="todosService.todos.length; else noTodos">
-        <li *ngFor="let todo of todosService.todos | todosFilter:selectedCity; index as i">
+<div *ngIf="loading">
+    <ul *ngIf="todos.length; else noTodos">
+        <li *ngFor="let todo of todos | todosFilter:selectedCity; index as i">
             <div class="p-inputgroup">
                 <span class="p-inputgroup-addon">
-                    <p-checkbox [(ngModel)]="todo.completed" [binary]="true" ng-change="onChange(todo.id)"></p-checkbox>
+                    <p-checkbox [ngModel]="todo.completed" [binary]="true" (onChange)="todosService.onToggle(todo.id)"></p-checkbox>
                 </span>
                 <input type="text" pInputText placeholder="Username" [value]="todo.title">
                 <button pButton pRipple type="button" icon="pi pi-times" class="p-button-danger"
-                    (click)="removeTodo(todo.id)"></button>
+                    (click)="todosService.removeTodo(todo.id)"></button>
             </div>
         </li>
     </ul>
@@ -19,4 +19,6 @@
         <p style="text-align: center;">No Todos</p>
     </ng-template>
 </div>
-<p *ngIf="loading">Loading...</p>
+<p *ngIf="!loading">Loading...</p>
+
+<!--  -->
